--- a/E-Commerce website/frontend/src/Components/Hero/Hero.css
+++ b/E-Commerce website/frontend/src/Components/Hero/Hero.css
@@ -50,3 +50,10 @@
     font-size: 22px;
     font-weight: 500px;
 }
+
+.hero-right {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
