--- a/Chat app/src/components/ChatBox/ChatBox.css
+++ b/Chat app/src/components/ChatBox/ChatBox.css
@@ -102,3 +102,18 @@
   border-radius: 8px 8px 0px 8px;
   margin-bottom: 30px;
 }
+
+.r-msg .msg {
+  border-radius: 8px 8px 8px 0px;
+}
+
+.s-msg div, .r-msg div {
+  text-align: center;
+  font-size: 9px
+}
+
+.msg-img {
+  max-width: 230px;
+  margin-bottom: 30px;
+  border-radius: 10px;
+}
