--- a/Chat app/src/components/LeftSidebar/LeftSidebar.css
+++ b/Chat app/src/components/LeftSidebar/LeftSidebar.css
@@ -2,7 +2,6 @@
   background: #001030;
   color: white;
   height: 75vh;
-
 }
 
 .ls-top {
@@ -123,3 +122,10 @@
   display: block;
 }
 
+.friends.border img {
+  border: 3px solid #07fff3;
+}
+
+.friends.border div span {
+  color: #07fff3;
+}
