--- a/Chat app/src/index.css
+++ b/Chat app/src/index.css
@@ -4,7 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Poppins';
+  font-family: "Poppins";
 }
 
 ::-webkit-scrollbar {
@@ -15,6 +15,8 @@ img.dot {
   width: 15px !important;
 }
 
-.hidden {
-  display: none;
+@media (max-width: 900px) {
+  .hidden {
+    display: none;
+  }
 }
